# SimpleSDL

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  collisions.hpp  engine.hpp  object.hpp
include/ENGINE/: camera.hpp  collisions.hpp  engine.hpp
include/GAME/: player.hpp
include/SIMPLESDL/: animation.hpp  camera.hpp  collisions.hpp  engine.hpp  main.hpp  object.hpp  utils.hpp
src/: camera.cpp  collisions.cpp  engine.cpp  object.cpp
src/ENGINE/: CMakeLists.txt  camera.cpp  collisions.cpp  engine.cpp  object.cpp
src/GAME/: CMakeLists.txt  main.cpp  player.cpp
src/SIMPLESDL/: CMakeLists.txt  animation.cpp  camera.cpp  collisions.cpp  engine.cpp  object.cpp  utils.cpp
